# decipher-bench

./: .gitignore  AI.json  API.json  Bug.json  Cache.json  Cloud.json  Commit.json  Cookie.json  Daemon.json  Database.json  Elements.json  Endpoint.json  Firewall.json  Fork.json  Gateway.json  Instance.json  LICENSE  Latency.json  LoadBalancing.json  MANIFEST.in  OOP.json  Pipeline.json  README.md  UI.json  UX.json  pyproject.toml  setup.py
docs/: DEV.md
sample_evals/: tech_terms.csv  tech_terms_sub.csv
sample_evals/BERTScore/gemma/: eval_script.ipynb
sample_evals/BERTScore/llama/: eval_script.ipynb
src/: __init__.py
src/decipher_bench/: __init__.py  benchmark.py  cli.py  models.py  reporters.py
src/decipher_bench/evaluators/: __init__.py  core.py
src/decipher_bench/templates/: report_template.html
src/decipher_bench/utils/: __init__.py
tests/: __init__.py
tests/generation/: __init__.py
tests/generation/creative/: summarize_sonnet_01.json
tests/knowledge/: __init__.py
tests/knowledge/accuracy/: knowledge_factual_01.json  knowledge_factual_02.json  knowledge_factual_03.json  knowledge_factual_04.json  knowledge_factual_05.json  knowledge_factual_06.json  knowledge_factual_07.json  knowledge_factual_08.json  knowledge_factual_09.json  knowledge_factual_10.json
tests/knowledge/common/: reasoning_commonsense_01.json  reasoning_commonsense_02.json  reasoning_commonsense_03.json  reasoning_commonsense_04.json  reasoning_commonsense_05.json  reasoning_commonsense_06.json  reasoning_commonsense_07.json  reasoning_commonsense_08.json
tests/knowledge/factual/: knowledge_factual_001.json  knowledge_factual_002.json  knowledge_factual_0036.json  knowledge_factual_0037.json  knowledge_factual_0038.json  knowledge_factual_0039.json  knowledge_factual_004.json  knowledge_factual_0040.json  knowledge_factual_0041.json  knowledge_factual_0042.json  knowledge_factual_0043.json  knowledge_factual_0044.json  knowledge_factual_0045.json  knowledge_factual_0046.json  knowledge_factual_0047.json  knowledge_factual_0048.json  knowledge_factual_0049.json  knowledge_factual_0050.json  knowledge_factual_0051.json  knowledge_factual_0052.json  knowledge_factual_0053.json  knowledge_factual_0054.json  knowledge_factual_0055.json  knowledge_factual_0056.json  knowledge_factual_0057.json  knowledge_factual_0058.json  knowledge_factual_0059.json  knowledge_factual_0060.json  knowledge_factual_0061.json  knowledge_factual_0062.json  knowledge_factual_0063.json  knowledge_factual_0064.json  knowledge_factual_0065.json  knowledge_factual_0066.json  knowledge_factual_0067.json  knowledge_factual_0068.json  knowledge_factual_009.json  knowledge_factual_011.json  knowledge_factual_012.json  knowledge_factual_013.json  (+21 more)
tests/knowledge/logic/: reasoning_logical_01.json  reasoning_logical_02.json  reasoning_logical_03.json  reasoning_logical_04.json  reasoning_logical_05.json  reasoning_logical_06.json
tests/performance/: __init__.py
tests/safety/: __init__.py
